# SimpleGameEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Engine.cpp  Engine.h  Enumerated.h  LICENSE  MinimapBorder.cpp  MinimapBorder.h  Object.cpp  Object.h  Player.cpp  Player.h  Polygon.cpp  Polygon.h  README.md  Utilities.cpp  Utilities.h  Wall.cpp  Wall.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp
